correct flex-wrap in projects

--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -8,7 +8,7 @@
 
 
 .form {
-    width: 300px;
+    min-width: 150px;
     height: 100px;
     background-color: aqua;
     border: 1px solid;
