--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -1,15 +1,11 @@
 .projectsBlock {
-    height: 100vh;
+    min-height: 100vh;
     background-color: darkgrey;
 }
 
 .projectsContainer  {
     flex-direction: column;
     justify-content: flex-start;
-}
-
-.title {
-    background-color: aquamarine;
 }
 
 .projects {
@@ -20,3 +16,8 @@
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
+.title {
+    background-color: aquamarine;
+}
+
